--- a/frontend/hoardr/package.json
+++ b/frontend/hoardr/package.json
@@ -9,7 +9,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^3.4.4",
+    "tailwindcss": "^2.2.17",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
